--- a/style.css
+++ b/style.css
@@ -3,39 +3,52 @@
     font-style: normal;
     font-weight: 200;
     src: url(https://fonts.gstatic.com/s/sourcesanspro/v14/6xKydSBYKcSV-LCoeQqfX1RYOo3i94_wlxdr.ttf) format('truetype');
-}
-
-@font-face {
+  }
+  @font-face {
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 300;
     src: url(https://fonts.gstatic.com/s/sourcesanspro/v14/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdr.ttf) format('truetype');
-}
-
-* {
-    box-sizing : border-box;
+  }
+  * {
+    box-sizing: border-box;
+    margin: 0;
     padding: 0;
-    font-weight: 100;
-}
-
-body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;
+  }
+  body {
+    font-family: "Source Sans Pro", sans-serif;
     color: white;
     font-weight: 300;
-}
-
-body ::-webkit-input-placeholder {
+  }
+  body ::-webkit-input-placeholder {
     /* WebKit browsers */
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     color: white;
     font-weight: 300;
-}
-
-.wrapper {
-    background: #788a89;
-    /* background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-    background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-    background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%); */
+  }
+  body :-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    font-family: "Source Sans Pro", sans-serif;
+    color: white;
+    opacity: 1;
+    font-weight: 300;
+  }
+  body ::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    font-family: "Source Sans Pro", sans-serif;
+    color: white;
+    opacity: 1;
+    font-weight: 300;
+  }
+  body :-ms-input-placeholder {
+    /* Internet Explorer 10+ */
+    font-family: "Source Sans Pro", sans-serif;
+    color: white;
+    font-weight: 300;
+  }
+  .wrapper {
+    background: #50a3a2;
     background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
     position: absolute;
     top: 50%;
@@ -44,35 +57,32 @@ body ::-webkit-input-placeholder {
     height: 400px;
     margin-top: -200px;
     overflow: hidden;
-}
-
-.wrapper .form-success .container h1 {
+  }
+  .wrapper.form-success .container h1 {
     transform: translateY(85px);
-}
-
-.container {
+  }
+  .container {
     max-width: 600px;
     margin: 0 auto;
     padding: 80px 0;
     height: 400px;
     text-align: center;
-}
-
-.container h1 {
+  }
+  .container h1 {
     font-size: 40px;
     transition-duration: 1s;
     transition-timing-function: ease-in-put;
     font-weight: 200;
-}
-
-form {
+  }
+  form {
     padding: 20px 0;
     position: relative;
     z-index: 2;
-}
-
-form input {
-    appearance: none;
+  }
+  form input {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     outline: 0;
     border: 1px solid rgba(255, 255, 255, 0.4);
     background-color: rgba(255, 255, 255, 0.2);
@@ -86,20 +96,19 @@ form input {
     color: white;
     transition-duration: 0.25s;
     font-weight: 300;
-}
-
-form input:hover {
+  }
+  form input:hover {
     background-color: rgba(255, 255, 255, 0.4);
-}
-
-form input:focus {
+  }
+  form input:focus {
     background-color: white;
     width: 300px;
     color: #53e3a6;
-}
-
-form button {
-    appearance: none;
+  }
+  form button {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     outline: 0;
     background-color: white;
     border: 0;
@@ -110,108 +119,113 @@ form button {
     cursor: pointer;
     font-size: 18px;
     transition-duration: 0.25s;
-}
-
-form button:hover {
+  }
+  form button:hover {
     background-color: #f5f7f9;
-    opacity: 0.8;
-}
-
-.bg-bubbles {
+  }
+  .bg-bubbles {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
-}
-
-.bg-bubbles li {
+  }
+  .bg-bubbles li {
     position: absolute;
     list-style: none;
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: rgba(255, 255, 255, 0.15);
     bottom: -160px;
-    border-radius: 50%;
+    -webkit-animation: square 25s infinite;
     animation: square 25s infinite;
     transition-timing-function: linear;
-}
-
-.bg-bubbles li:nth-child(1) {
+  }
+  .bg-bubbles li:nth-child(1) {
     left: 10%;
-}
-
-.bg-bubbles li:nth-child(2) {
+  }
+  .bg-bubbles li:nth-child(2) {
     left: 20%;
     width: 80px;
     height: 80px;
-    animation-delay: 2s;
-    animation-duration: 17s;
-}
-
-.bg-bubbles li:nth-child(3) {
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
+    -webkit-animation-duration: 17s;
+            animation-duration: 17s;
+  }
+  .bg-bubbles li:nth-child(3) {
     left: 25%;
-    animation-delay: 4s;
-}
-
-.bg-bubbles li:nth-child(4) {
+    -webkit-animation-delay: 4s;
+            animation-delay: 4s;
+  }
+  .bg-bubbles li:nth-child(4) {
     left: 40%;
     width: 60px;
     height: 60px;
-    animation-duration: 22s;
+    -webkit-animation-duration: 22s;
+            animation-duration: 22s;
     background-color: rgba(255, 255, 255, 0.25);
-}
-
-.bg-bubbles li:nth-child(5) {
+  }
+  .bg-bubbles li:nth-child(5) {
     left: 70%;
-}
-
-.bg-bubbles li:nth-child(6) {
+  }
+  .bg-bubbles li:nth-child(6) {
     left: 80%;
     width: 120px;
     height: 120px;
-    animation-delay: 3s;
+    -webkit-animation-delay: 3s;
+            animation-delay: 3s;
     background-color: rgba(255, 255, 255, 0.2);
-}
-
-.bg-bubbles li:nth-child(7) {
+  }
+  .bg-bubbles li:nth-child(7) {
     left: 32%;
     width: 160px;
     height: 160px;
-    animation-delay: 7s;
-}
-
-.bg-bubbles li:nth-child(8) {
+    -webkit-animation-delay: 7s;
+            animation-delay: 7s;
+  }
+  .bg-bubbles li:nth-child(8) {
     left: 55%;
     width: 20px;
     height: 20px;
-    animation-delay: 15s;
-    animation-duration: 40s;
-}
-
-.bg-bubbles li:nth-child(9) {
+    -webkit-animation-delay: 15s;
+            animation-delay: 15s;
+    -webkit-animation-duration: 40s;
+            animation-duration: 40s;
+  }
+  .bg-bubbles li:nth-child(9) {
     left: 25%;
     width: 10px;
     height: 10px;
-    animation-delay: 2s;
-    animation-duration: 40s;
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
+    -webkit-animation-duration: 40s;
+            animation-duration: 40s;
     background-color: rgba(255, 255, 255, 0.3);
-}
-
-.bg-bubbles li:nth-child(10) {
+  }
+  .bg-bubbles li:nth-child(10) {
     left: 90%;
     width: 160px;
     height: 160px;
-    animation-delay: 11s;
-}
-
-@keyframes square {
+    -webkit-animation-delay: 11s;
+            animation-delay: 11s;
+  }
+  @-webkit-keyframes square {
     0% {
-        transform: translateY(0);
+      transform: translateY(0);
     }
     100% {
-        transform: translateY(-700px) rotate(600deg);
+      transform: translateY(-700px) rotate(600deg);
     }
-}
+  }
+  @keyframes square {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-700px) rotate(600deg);
+    }
+  }
+  
